fix join our community alignment

--- a/docs/assets/scss/_left_nav.scss
+++ b/docs/assets/scss/_left_nav.scss
@@ -1392,6 +1392,7 @@ aside.td-sidebar nav > ul > li.bottom-link.arrow-menu > i::before {
 
 .left-bottom-nav .internal.list {
   padding: 0;
+  padding-left: 8px;
 }
 
 li.section.submenu.parent-menu > ul > li > a {
